--- a/KASA/src/components/header/header.scss
+++ b/KASA/src/components/header/header.scss
@@ -1,7 +1,26 @@
 header {
+    padding: 50px 50px 45px;
     display: flex;
+    justify-content: space-between;
+    img {
+        width: 210px;
+        height: 70px;        
+    }
 
-    a {
-        color: orange;
+    nav {
+        display: flex;
+        align-items: center;
+        a {
+            color: black;
+            font-family: Montserrat;
+            font-size: 24px;
+            font-weight: 500;
+            padding-right: 20px;
+            text-decoration: none;
+        }
+
+        .active{
+            text-decoration: underline;
+        }
     }
 }
