--- a/KASA/src/components/footer/footer.scss
+++ b/KASA/src/components/footer/footer.scss
@@ -8,11 +8,13 @@
     img {
         height: 40px;
         width: 122px;
+        padding-top: 66px;
     }
     p {
         color: white;
         font-family: Montserrat;
         font-size: 24px;
         font-weight: 500;
+        padding: 30px;
     }
  }
