--- a/KASA/src/styles/styles.scss
+++ b/KASA/src/styles/styles.scss
@@ -1,3 +1,4 @@
 @import './general.scss';
 @import '../components/header/header.scss';
 @import '../components/footer/footer.scss';
+@import '../layouts/banner/banner.scss';
