--- a/KASA/src/components/footer/footer.scss
+++ b/KASA/src/components/footer/footer.scss
@@ -1,15 +1,20 @@
  footer {
+    position: absolute;
+    bottom: 0%;
     background-color: black;
     height: 210px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     img {
         height: 40px;
         width: 122px;
         padding-top: 66px;
     }
+    
     p {
         color: white;
         font-family: Montserrat;
