page d'accueil ok

--- a/KASA/src/styles/styles.scss
+++ b/KASA/src/styles/styles.scss
@@ -2,3 +2,5 @@
 @import '../components/header/header.scss';
 @import '../components/footer/footer.scss';
 @import '../layouts/banner/banner.scss';
+@import '../layouts/gallery/gallery.scss';
+@import '../components/card/card.scss';
