--- a/KASA/src/layouts/banner/banner.scss
+++ b/KASA/src/layouts/banner/banner.scss
@@ -16,6 +16,7 @@
             object-fit: cover;
             border-radius: 25px;
             filter: brightness(0.6);
+            box-shadow: 2px 2px 5px;
          }
          
         p { 
