--- a/KASA/src/layouts/gallery/gallery.scss
+++ b/KASA/src/layouts/gallery/gallery.scss
@@ -1,5 +1,8 @@
 .gallery {
-    margin: 0px 50px 50px;
+    @media (max-width: 700px) {
+        margin: 22px 20px 27px;     
+    }
+    margin: 50px 50px 50px;
     background: #F6F6F6;
     border-radius: 25px;
     padding: 50px 50px 0px 0px;
