--- a/KASA/src/layouts/banner/banner.scss
+++ b/KASA/src/layouts/banner/banner.scss
@@ -1,15 +1,22 @@
 .banner {
+    @media (max-width: 700px) {
+        height: 111px;
+        padding: 0px 20px;
+        overflow: hidden;
+    }
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;  
     height: 223px;
-    padding: 0px 50px 45px;
+    padding: 0px 50px;
     border-radius: 25px;
-    position: relative;
             
         img { 
+            @media (max-width: 700px) {
+                height: 111px;
+            }
             grid-area: 1 / 1 / 4 / 2;
             height: 100%;
             width: 100%;
@@ -20,6 +27,12 @@
          }
          
         p { 
+            @media (max-width: 700px) {
+                font-size: 24px;
+                text-align: start;     
+                padding-left: 15px;  
+                bottom: 25%;       
+            }
             grid-area: 2 / 1 / 3 / 2;
             font-family: Montserrat;
             text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -28,6 +41,5 @@
             text-align: center;
             color: white;
             position: relative;
-            z-index: 1;
          }
 }
