--- a/KASA/src/components/card/card.scss
+++ b/KASA/src/components/card/card.scss
@@ -1,5 +1,10 @@
 figure {
-    width: 25%;
+    @media (max-width: 700px) {
+        width: 100%;
+        margin: 0px;
+        margin-bottom: 22px;
+    }
+    min-width: 25%;
     height: 340px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
