--- a/KASA/src/components/footer/footer.scss
+++ b/KASA/src/components/footer/footer.scss
@@ -14,6 +14,10 @@
     }
     
     p {
+        @media (max-width: 700px) {
+            font-size: 12px;
+            text-align: center;
+        }
         color: white;
         font-family: Montserrat;
         font-size: 24px;
