--- a/KASA/src/styles/styles.scss
+++ b/KASA/src/styles/styles.scss
@@ -4,3 +4,5 @@
 @import '../layouts/banner/banner.scss';
 @import '../layouts/gallery/gallery.scss';
 @import '../components/card/card.scss';
+@import '../components/drops/drop.scss';
+@import '../styles/animations.scss';
