--- a/KASA/src/styles/styles.scss
+++ b/KASA/src/styles/styles.scss
@@ -1,7 +1,7 @@
 @import './general.scss';
-@import '../components/header/header.scss';
-@import '../components/footer/footer.scss';
-@import '../layouts/banner/banner.scss';
+@import '../layouts/header/header.scss';
+@import '../layouts/footer/footer.scss';
+@import '../components/banner/banner.scss';
 @import '../layouts/gallery/gallery.scss';
 @import '../components/card/card.scss';
 @import '../components/drops/drop.scss';
