--- a/KASA/src/styles/styles.scss
+++ b/KASA/src/styles/styles.scss
@@ -6,3 +6,5 @@
 @import '../components/card/card.scss';
 @import '../components/drops/drop.scss';
 @import '../styles/animations.scss';
+@import '../components/404/404.scss';
+@import '../components/NavBar/NavBar.scss';
