--- a/KASA/src/styles/styles.scss
+++ b/KASA/src/styles/styles.scss
@@ -4,7 +4,7 @@
 @import '../components/banner/banner.scss';
 @import '../layouts/gallery/gallery.scss';
 @import '../components/card/card.scss';
-@import '../components/drops/drop.scss';
+@import '../components/collapses/collapses.scss';
 @import '../styles/animations.scss';
 @import '../components/404/404.scss';
 @import '../components/NavBar/NavBar.scss';
