--- a/KASA/src/components/collapses/collapses.scss
+++ b/KASA/src/components/collapses/collapses.scss
@@ -1,18 +1,18 @@
-.dropContainer {
+.collapsesContainer {
     @media (max-width: 700px) {
         padding: 0px 20px;
         margin-top: 20px;
     }
     padding: 20px 50px;
 
-    .drops {
+    .collapses {
         display: flex;
         flex-direction: column;
         margin: 10px 0px 20px;
         border-radius: 5px;
         overflow: hidden;
 
-        .drops_content {
+        .collapses_content {
             @media (max-width: 700px) {
                 height: 30px;
                 margin: 0px;
